--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "uuid": "^9.0.0"
   }
