--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": " nodemon server.ts",
+    "dev": "   nodemon server.ts",
     "start": "node ./build/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,11 +29,17 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.28",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
