--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": " npx tsc && node ./build/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "git": "npx tsc && git init && git add .  && git commit -m \"init\""
+    "git": "npx tsc && git init && git add .  && git commit -m \"build folder pushed\"  && git push"
   },
   "keywords": [],
   "author": "",
