--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "start": " npx tsc && node ./build/server.js",
-    "build": "tsc",
+    "start": "npm install && npm run build tsc && node build/server.js",
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "git": "npx tsc && git init && git add .  && git commit -m \"build folder pushed\"  && git push"
   },
