--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "start": "node build/server.js",
+    "start": "tsc && node build/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "git": "npx tsc && git init && git add .  && git commit -m \"build folder pushed\"  && git push"
@@ -41,7 +41,6 @@
     "@types/node": "^20.11.28",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.8",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
 }
