--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "start": "tsc && node build/server.js",
+    "start": "node build/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "git": "npx tsc && git init && git add .  && git commit -m \"build folder pushed\"  && git push"
