--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^20.11.28",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.8",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
 }
