--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.ts",
     "start": "node build/server.js",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "git": "npx tsc && git init && git add .  && git commit -m \"production ready\"  && git push"
   },
