--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon build/server.js",
     "start": "npm run build:live",
     "build:live": "nodemon",
+    "build": "npx tsc",
     "git": "npx tsc && git init && git add .  && git commit -m \"production ready\"  && git push"
   },
   "keywords": [],
